--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "heroku-postbuild": "gatsby build"
+    "now-build": "npm run build"
   },
   "repository": {
     "type": "git",
