--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "caniuse-lite": "^1.0.30001245",
     "express": "^4.17.1",
     "gatsby": "^2.24.83",
     "gatsby-image": "^2.2.14",
