--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/react": "^1.6.22",
+    "acorn": "^6.4.2",
     "babel-plugin-styled-components": "^1.10.6",
     "caniuse-lite": "^1.0.30001245",
     "express": "^4.17.1",
@@ -14,22 +16,23 @@
     "gatsby-plugin-manifest": "^2.2.9",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.5",
-    "gatsby-plugin-sharp": "^2.2.18",
+    "gatsby-plugin-sharp": "^2.14.4",
     "gatsby-plugin-sitemap": "^2.2.9",
     "gatsby-plugin-styled-components": "^3.1.3",
     "gatsby-source-filesystem": "^2.1.18",
     "gatsby-transformer-sharp": "^2.5.19",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
-    "webpack": "^5.1.3"
+    "webpack": "^4.46.0"
   },
   "keywords": [
     "gatsby"
