updated to camel case seo, gatsby package updates.

--- a/package.json
+++ b/package.json
@@ -6,32 +6,34 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
-    "acorn": "^6.4.2",
-    "babel-plugin-styled-components": "^1.10.6",
+    "acorn": "^8.4.1",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "caniuse-lite": "^1.0.30001245",
     "express": "^4.17.1",
     "gatsby": "^3.9.1",
-    "gatsby-image": "^2.2.14",
-    "gatsby-plugin-google-analytics": "^2.1.11",
-    "gatsby-plugin-manifest": "^2.2.9",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.5",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-plugin-sitemap": "^2.2.9",
-    "gatsby-plugin-styled-components": "^3.1.3",
-    "gatsby-source-filesystem": "^2.1.18",
-    "gatsby-transformer-sharp": "^2.5.19",
+    "gatsby-image": "^3.9.0",
+    "gatsby-plugin-google-analytics": "^3.9.0",
+    "gatsby-plugin-manifest": "^3.9.0",
+    "gatsby-plugin-offline": "^4.9.0",
+    "gatsby-plugin-react-helmet": "^4.9.0",
+    "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-plugin-sitemap": "^4.5.0",
+    "gatsby-plugin-styled-components": "^4.9.0",
+    "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-transformer-sharp": "^3.9.0",
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
+    "postcss": "^8.3.5",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.2",
-    "typescript": "^2.9.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.0",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "prettier": "^1.18.2",
+    "prettier": "^2.3.2",
     "webpack": "^5.45.1"
   },
   "keywords": [
